Add missing column:exercise from database

--- a/app/src/main/res/layout/fragment_forum.xml
+++ b/app/src/main/res/layout/fragment_forum.xml
@@ -31,6 +31,13 @@
         android:inputType="text" />
 
     <EditText
+        android:id="@+id/exercise"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/forum_exercise_hint"
+        android:inputType="text" />
+
+    <EditText
         android:id="@+id/date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
