Update ProgramFragment to use Spinner

--- a/app/src/main/res/layout/fragment_program.xml
+++ b/app/src/main/res/layout/fragment_program.xml
@@ -24,12 +24,11 @@
             android:hint="@string/forum_workout_hint"
             android:inputType="text" />
 
-        <EditText
+        <Spinner
             android:id="@+id/exercise"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/forum_exercise_hint"
-            android:inputType="text" />
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content" />
+
     </LinearLayout>
 
 </FrameLayout>
