Update ForumFragment to show Programs From DB
ForumFragment will give option to select program from DB instead of
entering program manually.

--- a/app/src/main/res/layout/fragment_forum.xml
+++ b/app/src/main/res/layout/fragment_forum.xml
@@ -10,26 +10,10 @@
               android:paddingLeft="16dp"
               android:paddingRight="16dp"
               android:orientation="vertical" >
-    <EditText
+    <Spinner
         android:id="@+id/program"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/forum_program_hint"
-        android:inputType="text" />
-
-    <EditText
-        android:id="@+id/workout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/forum_workout_hint"
-        android:inputType="text" />
-
-    <EditText
-        android:id="@+id/exercise"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/forum_exercise_hint"
-        android:inputType="text" />
+        android:layout_height="wrap_content"/>
 
     <EditText
         android:id="@+id/date"
