--- a/app/src/main/res/layout/fragment_weight.xml
+++ b/app/src/main/res/layout/fragment_weight.xml
@@ -26,7 +26,7 @@
             android:id="@+id/time"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/forum_date_hint"
+            android:hint="@string/forum_time_hint"
             android:inputType="datetime" />
     </LinearLayout>
 </FrameLayout>
